# MontlyCurrencyOffsetPayment

./: .gitignore  MontlyCurrencyOffsetPaymentServer.py  README  setup.cfg  setup.py
src/htmltemplates/: index.html
