[metadata]
name			= mcopserver
version			= 0.0.1
author			= daneedtools
description		= Monthly Currency Offset Payment Server
license			= Proprietary
classifiers		=
    Programming Language :: Python :: 3
	License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
	= .
packages = find:
python_requires = >=3.6
install_requires =
	flask
	python-dateutil
	pandasdmx
	requests_cache

[options.packages.find]
where = .
